fixed button text in my_lessons.html from spilling over.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -330,12 +330,13 @@ label {
 
 /*****my lessons*****/
 #home_my_lessons_btn{
-  line-height: inherit;
+  line-height: 27px;
   margin-bottom: 80px;
   font-size: 20px;
   background-color: #FAAD00;
   box-shadow: 0 10px 10px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   width: 210px;
+  padding-top: 3px;
 }
 
 #myLessonsTable{
